[project]
authors = [{name = "liuyifan", email = "lyf369562@alibaba-inc.com"}]
dependencies = []
name = "dev_noti"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
dev_noti = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
async-lru = ">=2.0.5,<3"
python-telegram-bot = ">=22.1,<23"
structlog = ">=25.4.0,<26"
tomli = ">=2.2.1,<3"
