[project]
authors = [{ name = "liuyifan", email = "luffbee@outlook.com" }]
name = "dev_noti"
requires-python = ">= 3.11"
version = "0.1.0"
dependencies = []

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]
preview = ["pixi-build"]


[tool.pixi.tasks]

[tool.pixi.package.build]
backend = { name = "pixi-build-python", version = "*" }
channels = [
    "https://prefix.dev/pixi-build-backends",
    "https://prefix.dev/conda-forge",
]


[tool.pixi.package.host-dependencies]
hatchling = "*"

[tool.pixi.package.run-dependencies]
async-lru = ">=2.0.5,<3"
python-telegram-bot = ">=22.1,<23"
structlog = ">=25.4.0,<26"
tomli = ">=2.2.1,<3"
aiohttp = ">=3.12.8,<4"

[tool.pixi.dependencies]
dev_noti = { path = "." }
ipykernel = ">=6.29.5,<7"
